# debug-assistant

./: .gitignore  README.md  dev.ps1
cli/: README.md  pyproject.toml
cli/debug_assistant_cli/: __init__.py  __main__.py  install_cmd.py
docs/: ARCHITECTURE.md  SPEC.md
gui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
gui/src/api/: client.ts
gui/src/components/: NewReportDialog.tsx  ProjectsPage.tsx  ReportDetail.tsx  ReportList.tsx  ResolveDialog.tsx  SettingsPage.tsx  Sidebar.tsx
gui/src/styles/: global.css
sdk/python/: README.md  pyproject.toml
sdk/python/debug_assistant/: __init__.py  auto.py  client.py  decorators.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: client.ts  index.ts
server/: README.md  pyproject.toml
server/app/: __init__.py  config.py  main.py
server/app/api/: __init__.py  registry.py  report.py  resolve.py  search.py
server/app/models/: __init__.py  error_report.py
server/app/storage/: __init__.py  csv_index.py  markdown_writer.py  registry.py
