[project]
name = "debug-assistant-cli"
version = "0.1.0"
description = "CLI for debug-assistant"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-only" }
dependencies = ["typer>=0.12.0", "httpx>=0.27.0"]

[project.scripts]
debugger = "debug_assistant_cli.__main__:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
