[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debug-assistant-cli"
version = "0.1.0"
description = "Debug Assistant CLI"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12,<1.0",
  "debug-assistant-sdk",
]

[project.scripts]
debugger = "debug_assistant_cli.__main__:main"

[tool.setuptools.packages.find]
include = ["debug_assistant_cli*"]
