[project]
name = "debug-assistant-server"
version = "0.1.0"
description = "FastAPI server for debug-assistant: error report ingestion + closed-loop resolution"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
