[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debug-assistant-sdk"
version = "0.1.0"
description = "Python SDK for Debug Assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []   # 仅依赖标准库

[tool.setuptools.packages.find]
include = ["debug_assistant*"]
