[package]
name = "debug-assistant-sdk"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Rust SDK for Debug Assistant"
repository = "https://github.com/Nikki-SU/debug-assistant"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.10", default-features = false, features = ["json"] }

[lib]
name = "debug_assistant_sdk"
path = "src/lib.rs"
